[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/menu.theme" type="Theme" id=1]
[ext_resource path="res://src/ui/main_menu/level_select/level_select.gd" type="Script" id=2]
[ext_resource path="res://raw_assets/sfx/ui/switch_004.ogg" type="AudioStream" id=3]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}
_level_directory_path = "res://src/levels/"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 1940.0
margin_bottom = 182.0
size_flags_vertical = 7
size_flags_stretch_ratio = 0.29
theme_type_variation = "Header1"
text = "Level Select"
align = 1
valign = 1

[node name="BtnBack" type="Button" parent="VBoxContainer/TitleLabel"]
anchor_bottom = 1.0
margin_right = 42.0
size_flags_vertical = 3
text = "Back"

[node name="BtnStartLevel" type="Button" parent="VBoxContainer/TitleLabel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -232.0
disabled = true
text = "Start Level"

[node name="LevelButtons" type="GridContainer" parent="VBoxContainer"]
margin_left = 970.0
margin_top = 202.0
margin_right = 970.0
margin_bottom = 831.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_left = 791.0
margin_top = 851.0
margin_right = 1149.0
margin_bottom = 1040.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 352.0
margin_bottom = 183.0

[node name="LabelLevel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 346.0
margin_bottom = 51.0
theme_type_variation = "Header3"
text = "Level #"
align = 1
valign = 1

[node name="LevelStats" type="GridContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 346.0
margin_bottom = 177.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/LevelStats"]
margin_right = 233.0
margin_bottom = 51.0
theme_type_variation = "Header3"
text = "Par Time:"
align = 2

[node name="LabelParTime" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/LevelStats"]
margin_left = 253.0
margin_right = 346.0
margin_bottom = 51.0
theme_type_variation = "Header3"
text = "--.--"

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/LevelStats"]
margin_top = 71.0
margin_right = 233.0
margin_bottom = 122.0
theme_type_variation = "Header3"
text = "Best Time:"
align = 2

[node name="LabelBestTime" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/LevelStats"]
margin_left = 253.0
margin_top = 71.0
margin_right = 346.0
margin_bottom = 122.0
theme_type_variation = "Header3"
text = "--.--"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 2
bus = "UISounds"

[connection signal="pressed" from="VBoxContainer/TitleLabel/BtnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="VBoxContainer/TitleLabel/BtnStartLevel" to="." method="_on_start_level_button_pressed"]
